# tarang

./: .firebaserc  .gitignore  Cargo.toml  index.html  index.scss
src/: content.rs  data_load.rs  lib.rs  main.rs  router.rs
src/components/: anchor_link.rs  app.rs  author_card.rs  event_card.rs  image_carousel.rs  mod.rs  pagination.rs  post_card.rs
src/pages/: about.rs  contact.rs  event.rs  event_list.rs  event_page.rs  events.rs  home.rs  mod.rs
static/events/: list.json
static/events/defaults/: list.json
