[package]
name = "tarang_dc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
gloo = "0.10"
instant = { version = "0.1", features = ["wasm-bindgen"] }
lipsum = "0.9.0"
log = "0.4"
once_cell = "1"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = ["console"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = { version = "0.18.0" }

chrono = { version = "0.4.33", features = ["serde"] }
chrono-tz = "0.8.5"
anyhow = "1.0.77"
# path = "../../packages/yew",
# path = "../../pacges/yew-router"
